# langChainDemo

./: assignment1_interviewTipsGen.py  embadding_multi_assignment.py  embeddings_Demo.py  jobSearch_helper.py  landmark_helper.py  main.py  market_email_chain_assignment.py  openai_demo.py  pyproject.toml  rag_demo.py  requirements.txt  sequential_chain_demo.py  similirty_finding_Demo.py  streamlit_demo.py  useCase_3_sample_test.py
RAG/: README.txt  rag_demo.py
historyaware_rag/: README.txt  historyaware_rag_demo.py
historyaware_streamlit_rag/: historyaware_streamlit_rag_demo.py
legaldocument_streamlit_rag_assignment/: README.txt  legaldocument_streamlit_rag_assignment.py
