[project]
name = "langchaindemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.3",
    "langsmith[claude-agent-sdk]>=0.9.4",
    "openai>=2.44.0",
    "numpy>=2.1.0",
]
